--- a/series.conf
+++ b/series.conf
@@ -12822,6 +12822,7 @@
 	patches.suse/sched-Remove-the-limitation-of-WF_ON_CPU-on-wakelist-if-wakee-cpu-is-idle.patch
 	patches.suse/sched-fair-Remove-redundant-word.patch
 	patches.suse/sched-Remove-unused-function-group_first_cpu.patch
+	patches.suse/sched-core-Always-flush-pending-blk_plug.patch
 	patches.suse/ARM-OMAP2-Fix-refcount-leak-in-omapdss_init_of.patch
 	patches.suse/ARM-OMAP2-Fix-refcount-leak-in-omap3xxx_prm_late_ini.patch
 	patches.suse/cpufreq-zynq-Fix-refcount-leak-in-zynq_get_revision.patch
