--- a/series.conf
+++ b/series.conf
@@ -56596,6 +56596,7 @@
 	patches.suse/powerpc-powernv-rename-remaining-rng-powernv_-functi.patch
 	patches.suse/x86-speculation-Add-RSB-VM-Exit-protections.patch
 	patches.suse/x86-speculation-Add-LFENCE-to-RSB-fill-sequence.patch
+	patches.suse/kbuild-dummy-tools-avoid-tmpdir-leak-in-dummy-gcc.patch
 
 	# out-of-tree patches
 	patches.suse/random-fix-crash-on-multiple-early-calls-to-add_bootloader_randomness.patch
