--- a/series.conf
+++ b/series.conf
@@ -13213,6 +13213,7 @@
 	patches.suse/mfd-t7l66xb-Drop-platform-disable-callback.patch
 	patches.suse/mfd-max77620-Fix-refcount-leak-in-max77620_initialis.patch
 	patches.suse/Revert-drivers-video-backlight-platform_lcd.c-add-su.patch
+	patches.suse/iommu-arm-smmu-qcom_iommu-Add-of_node_put-when-breaking-out-of-l
 	patches.suse/powerpc-mobility-wait-for-memory-transfer-to-complet.patch
 	patches.suse/watchdog-export-lockup_detector_reconfigure.patch
 	patches.suse/powerpc-watchdog-introduce-a-NMI-watchdog-s-factor.patch
