--- a/series.conf
+++ b/series.conf
@@ -13229,6 +13229,7 @@
 	patches.suse/kfifo-fix-kfifo_to_user-return-type.patch
 	patches.suse/lib-smp_processor_id-fix-imbalanced-instrumentation_.patch
 	patches.suse/proc-fix-a-dentry-lock-race-between-release_task-and.patch
+	patches.suse/iommu-vt-d-avoid-invalid-memory-access-via-node_online-NUMA_NO_N
 	patches.suse/x86-olpc-fix-logical-not-is-only-applied-to-the-left.patch
 	patches.suse/serial-8250_dw-Store-LSR-into-lsr_saved_flags-in-dw8.patch
 	patches.suse/tty-n_gsm-fix-user-open-not-possible-at-responder-un.patch
