--- a/series.conf
+++ b/series.conf
@@ -56596,6 +56596,7 @@
 	patches.suse/powerpc-powernv-Avoid-crashing-if-rng-is-NULL.patch
 	patches.suse/powerpc-powernv-kvm-Use-darn-for-H_RANDOM-on-Power9.patch
 	patches.suse/powerpc-powernv-rename-remaining-rng-powernv_-functi.patch
+	patches.suse/iommu-vt-d-avoid-invalid-memory-access-via-node_online-NUMA_NO_N
 	patches.suse/x86-speculation-Add-RSB-VM-Exit-protections.patch
 	patches.suse/x86-speculation-Add-LFENCE-to-RSB-fill-sequence.patch
 
