--- a/series.conf
+++ b/series.conf
@@ -13293,6 +13293,7 @@
 	patches.suse/geneve-fix-TOS-inheriting-for-ipv4.patch
 	patches.suse/geneve-do-not-use-RT_TOS-for-IPv6-flowlabel.patch
 	patches.suse/can-j1939-j1939_sk_queue_activate_next_locked-replac.patch
+	patches.suse/can-ems_usb-fix-clang-s-Wunaligned-access-warning.patch
 
 	########################################################
 	# end of sorted patches
