--- a/series.conf
+++ b/series.conf
@@ -13291,6 +13291,7 @@
 	patches.suse/Bluetooth-L2CAP-Fix-l2cap_global_chan_by_psm-regress.patch
 	patches.suse/Bluetooth-MGMT-Fixes-build-warnings-with-C-1.patch
 	patches.suse/geneve-fix-TOS-inheriting-for-ipv4.patch
+	patches.suse/geneve-do-not-use-RT_TOS-for-IPv6-flowlabel.patch
 
 	########################################################
 	# end of sorted patches
