--- a/series.conf
+++ b/series.conf
@@ -13286,6 +13286,7 @@
 	patches.suse/Input-exc3000-fix-return-value-check-of-wait_for_com.patch
 	patches.suse/ACPI-property-Return-type-of-acpi_add_nondev_subnode.patch
 	patches.suse/net-phy-Warn-about-incorrect-mdio_bus_phy_resume-sta.patch
+	patches.suse/virtio_net-fix-memory-leak-inside-XPD_TX-with-mergea.patch
 
 	########################################################
 	# end of sorted patches
