--- a/series.conf
+++ b/series.conf
@@ -12899,6 +12899,7 @@
 	patches.suse/Bluetooth-btusb-Add-support-of-IMC-Networks-PID-0x35.patch
 	patches.suse/Bluetooth-hci_intel-Add-check-for-platform_driver_re.patch
 	patches.suse/Bluetooth-hci_bcm-Add-BCM4349B1-variant.patch
+	patches.suse/Bluetooth-btusb-Add-Realtek-RTL8852C-support-ID-0x04.patch
 	patches.suse/wifi-mac80211-limit-A-MSDU-subframes-for-client-too.patch
 	patches.suse/mt76-mt76x02u-fix-possible-memory-leak-in-__mt76x02u.patch
 	patches.suse/mt76-mt7615-do-not-update-pm-stats-in-case-of-error.patch
