--- a/series.conf
+++ b/series.conf
@@ -13298,6 +13298,7 @@
 	patches.suse/Revert-net-usb-ax88179_178a-needs-FLAG_SEND_ZLP.patch
 	patches.suse/vsock-Fix-memory-leak-in-vsock_connect.patch
 	patches.suse/vsock-Set-socket-state-back-to-SS_UNCONNECTED-in-vso.patch
+	patches.suse/devlink-Fix-use-after-free-after-a-failed-reload.patch
 
 	########################################################
 	# end of sorted patches
