--- a/series.conf
+++ b/series.conf
@@ -13288,6 +13288,7 @@
 	patches.suse/net-phy-Warn-about-incorrect-mdio_bus_phy_resume-sta.patch
 	patches.suse/virtio_net-fix-memory-leak-inside-XPD_TX-with-mergea.patch
 	patches.suse/atm-idt77252-fix-use-after-free-bugs-caused-by-tst_t.patch
+	patches.suse/Bluetooth-L2CAP-Fix-l2cap_global_chan_by_psm-regress.patch
 
 	########################################################
 	# end of sorted patches
