--- a/series.conf
+++ b/series.conf
@@ -12904,6 +12904,7 @@
 	patches.suse/Bluetooth-btusb-Add-Realtek-RTL8852C-support-ID-0x0C.patch
 	patches.suse/Bluetooth-btusb-Add-Realtek-RTL8852C-support-ID-0x13.patch
 	patches.suse/Bluetooth-btusb-Add-Realtek-RTL8852C-support-ID-0x13-6ad353dfc8ee.patch
+	patches.suse/Bluetooth-hci_bcm-Add-DT-compatible-for-CYW55572.patch
 	patches.suse/wifi-mac80211-limit-A-MSDU-subframes-for-client-too.patch
 	patches.suse/mt76-mt76x02u-fix-possible-memory-leak-in-__mt76x02u.patch
 	patches.suse/mt76-mt7615-do-not-update-pm-stats-in-case-of-error.patch
