--- a/series.conf
+++ b/series.conf
@@ -13235,6 +13235,7 @@
 	patches.suse/Revert-drivers-video-backlight-platform_lcd.c-add-su.patch
 	patches.suse/iommu-exynos-Handle-failed-IOMMU-device-registration-properly
 	patches.suse/iommu-arm-smmu-qcom_iommu-Add-of_node_put-when-breaking-out-of-l
+	patches.suse/iommu-amd-Simplify-and-Consolidate-Virtual-APIC-AVIC-Enablement
 	patches.suse/powerpc-mobility-wait-for-memory-transfer-to-complet.patch
 	patches.suse/watchdog-export-lockup_detector_reconfigure.patch
 	patches.suse/powerpc-watchdog-introduce-a-NMI-watchdog-s-factor.patch
