--- a/series.conf
+++ b/series.conf
@@ -12127,6 +12127,7 @@
 	patches.suse/iommu-mediatek-Fix-2-HW-sharing-pgtable-issue
 	patches.suse/iommu-mediatek-Add-list_del-in-mtk_iommu_remove
 	patches.suse/iommu-mediatek-Remove-clk_disable-in-mtk_iommu_remove
+	patches.suse/iommu-mediatek-Add-mutex-for-m4u_group-and-m4u_dom-in-data
 	patches.suse/iommu-arm-smmu-v3-sva-Fix-mm-use-after-free
 	patches.suse/iommu-amd-Increase-timeout-waiting-for-GA-log-enablement
 	patches.suse/i2c-at91-use-dma-safe-buffers.patch
