--- a/series.conf
+++ b/series.conf
@@ -11080,6 +11080,7 @@
 	patches.suse/drm-amdgpu-don-t-use-BACO-for-reset-in-S3.patch
 	patches.suse/drm-amdgpu-smu10-fix-SoC-fclk-units-in-auto-mode.patch
 	patches.suse/drm-nouveau-pmu-Add-missing-callbacks-for-Tegra-devi.patch
+	patches.suse/iommu-omap-Fix-regression-in-probe-for-NULL-pointer-dereference
 	patches.suse/Revert-mmc-sdhci-xenon-fix-annoying-1.8V-regulator-w.patch
 	patches.suse/mmc-mmci-stm32-correctly-check-all-elements-of-sg-li.patch
 	patches.suse/mmc-block-Check-for-errors-after-write-on-SPI.patch
