--- a/series.conf
+++ b/series.conf
@@ -11402,6 +11402,7 @@
 	patches.suse/hwmon-pmbus-disable-PEC-if-not-enabled.patch
 	patches.suse/selftests-seccomp-Don-t-call-read-on-TTY-from-backgr.patch
 	patches.suse/iommu-vt-d-Calculate-mask-for-non-aligned-flushes
+	patches.suse/iommu-vt-d-Drop-stop-marker-messages
 	patches.suse/iommu-arm-smmu-v3-Fix-size-calculation-in-arm_smmu_mm_invalidate
 	patches.suse/iommu-arm-smmu-disable-large-page-mappings-for-Nvidi.patch
 	patches.suse/can-grcan-grcan_close-fix-deadlock.patch
