--- a/series.conf
+++ b/series.conf
@@ -12125,6 +12125,7 @@
 	patches.suse/video-fbdev-clcdfb-Fix-refcount-leak-in-clcdfb_of_vr.patch
 	patches.suse/video-fbdev-pxa3xx-gcu-release-the-resources-correct.patch
 	patches.suse/iommu-mediatek-Fix-2-HW-sharing-pgtable-issue
+	patches.suse/iommu-mediatek-Add-list_del-in-mtk_iommu_remove
 	patches.suse/iommu-arm-smmu-v3-sva-Fix-mm-use-after-free
 	patches.suse/iommu-amd-Increase-timeout-waiting-for-GA-log-enablement
 	patches.suse/i2c-at91-use-dma-safe-buffers.patch
