--- a/series.conf
+++ b/series.conf
@@ -10131,6 +10131,7 @@
 	patches.suse/ACPI-x86-Work-around-broken-XSDT-on-Advantech-DAC-BJ.patch
 	patches.suse/ACPI-battery-Add-device-HID-and-quirk-for-Microsoft-.patch
 	patches.suse/ACPI-video-Force-backlight-native-for-Clevo-NL5xRU-a.patch
+	patches.suse/ACPI-APEI-explicit-init-of-HEST-and-GHES-in-apci_ini.patch
 	patches.suse/ACPI-APEI-fix-return-value-of-__setup-handlers.patch
 	patches.suse/ACPI-APEI-Limit-printable-size-of-BERT-table-data.patch
 	patches.suse/ACPI-docs-enumeration-Discourage-to-use-custom-_DSM-.patch
