--- a/series.conf
+++ b/series.conf
@@ -13072,6 +13072,7 @@
 	patches.suse/drm-simpledrm-Fix-return-type-of-simpledrm_simple_di.patch
 	patches.suse/nouveau-svm-Fix-to-migrate-all-requested-pages.patch
 	patches.suse/ARM-9216-1-Fix-MAX_DMA_ADDRESS-overflow.patch
+	patches.suse/ARM-findbit-fix-overflowing-offset.patch
 	patches.suse/edac-ghes-set-the-dimm-label-unconditionally.patch
 	patches.suse/docs-kernel-parameters-Update-descriptions-for-mitig.patch
 	patches.suse/arm64-kasan-Revert-arm64-mte-reset-the-page-tag-in-p.patch
