--- a/series.conf
+++ b/series.conf
@@ -13129,6 +13129,7 @@
 	patches.suse/bus-hisi_lpc-fix-missing-platform_device_put-in-hisi.patch
 	patches.suse/ACPI-processor-idle-Annotate-more-functions-to-live-.patch
 	patches.suse/ACPI-APEI-Better-fix-to-avoid-spamming-the-console-w.patch
+	patches.suse/ACPI-EC-Remove-duplicate-ThinkPad-X1-Carbon-6th-entr.patch
 	patches.suse/ACPI-video-Force-backlight-native-for-some-TongFang-.patch
 	patches.suse/ACPI-video-Shortening-quirk-list-by-identifying-Clev.patch
 	patches.suse/Documentation-ACPI-EINJ-Fix-obsolete-example.patch
