--- a/series.conf
+++ b/series.conf
@@ -13091,6 +13091,7 @@
 	patches.suse/nohz-full-sched-rt-Fix-missed-tick-reenabling-bug-in-dequeue_task_rt.patch
 	patches.suse/locking-lockdep-Fix-lockdep_init_map_-confusion.patch
 	patches.suse/ARM-OMAP2-Fix-refcount-leak-in-omapdss_init_of.patch
+	patches.suse/ARM-OMAP2-display-Fix-refcount-leak-bug.patch
 	patches.suse/ARM-OMAP2-Fix-refcount-leak-in-omap3xxx_prm_late_ini.patch
 	patches.suse/cpufreq-zynq-Fix-refcount-leak-in-zynq_get_revision.patch
 	patches.suse/ARM-bcm-Fix-refcount-leak-in-bcm_kona_smc_init.patch
