--- a/series.conf
+++ b/series.conf
@@ -7987,6 +7987,7 @@
 	patches.suse/ARM-dts-stm32-fix-dtbs_check-warning-on-ili9341-dts-.patch
 	patches.suse/arm64-dts-renesas-Fix-thermal-bindings.patch
 	patches.suse/arm64-tegra-Fixup-SYSRAM-references.patch
+	patches.suse/arm64-tegra-Update-Tegra234-BPMP-channel-addresses.patch
 	patches.suse/arm64-tegra-Adjust-length-of-CCPLEX-cluster-MMIO-reg.patch
 	patches.suse/arm64-dts-ti-k3-j721e-correct-cache-sets-info.patch
 	patches.suse/arm64-dts-ti-j7200-main-Fix-dtbs_check-serdes_ln_ctr.patch
