--- a/series.conf
+++ b/series.conf
@@ -13132,6 +13132,7 @@
 	patches.suse/arm64-dts-qcom-msm8916-Fix-typo-in-pronto-remoteproc.patch
 	patches.suse/arm64-dts-qcom-ipq8074-fix-NAND-node-name.patch
 	patches.suse/arm64-dts-qcom-sm8250-add-missing-PCIe-PHY-clock-cel.patch
+	patches.suse/ARM-dts-BCM5301X-Add-DT-for-Meraki-MR26.patch
 	patches.suse/arm64-dts-qcom-qcs404-Fix-incorrect-USB2-PHYs-assign.patch
 	patches.suse/dt-bindings-arm-qcom-fix-MSM8916-MTP-compatibles.patch
 	patches.suse/dt-bindings-arm-qcom-fix-MSM8994-boards-compatibles.patch
