--- a/series.conf
+++ b/series.conf
@@ -13077,6 +13077,7 @@
 	patches.suse/ARM-findbit-fix-overflowing-offset.patch
 	patches.suse/edac-ghes-set-the-dimm-label-unconditionally.patch
 	patches.suse/docs-kernel-parameters-Update-descriptions-for-mitig.patch
+	patches.suse/arm64-Do-not-forget-syscall-when-starting-a-new-thre.patch
 	patches.suse/arm64-kasan-Revert-arm64-mte-reset-the-page-tag-in-p.patch
 	patches.suse/arm64-cpufeature-Allow-different-PMU-versions-in-ID_.patch
 	patches.suse/sched-numa-Initialise-numa_migrate_retry.patch
