--- a/series.conf
+++ b/series.conf
@@ -13163,6 +13163,7 @@
 	patches.suse/thermal-tools-tmon-Include-pthread-and-time-headers-.patch
 	patches.suse/Documentation-dm-writecache-Render-status-list-as-li.patch
 	patches.suse/selftests-seccomp-Fix-compile-warning-when-CC-clang.patch
+	patches.suse/crypto-ccp-Use-kzalloc-for-sev-ioctl-interfaces-to-p.patch
 	patches.suse/crypto-sun8i-ss-fix-infinite-loop-in-sun8i_ss_setup_.patch
 	patches.suse/crypto-hisilicon-sec-don-t-sleep-when-in-softirq.patch
 	patches.suse/crypto-hisilicon-Kunpeng916-crypto-driver-don-t-slee.patch
