--- a/series.conf
+++ b/series.conf
@@ -10780,6 +10780,7 @@
 	patches.suse/drm-msm-dp-always-add-fail-safe-mode-into-connector-.patch
 	patches.suse/drm-msm-dsi-Use-ref-fw-clock-instead-of-global-name-.patch
 	patches.suse/drm-msm-dsi-Remove-spurious-IRQF_ONESHOT-flag.patch
+	patches.suse/drm-msm-Avoid-dirtyfb-stalls-on-video-mode-displays-.patch
 	patches.suse/drm-msm-a6xx-Fix-missing-ARRAY_SIZE-check.patch
 	patches.suse/drm-i915-gem-add-missing-boundary-check-in-vm_access.patch
 	patches.suse/drm-i915-display-Fix-HPD-short-pulse-handling-for-eD.patch
