--- a/series.conf
+++ b/series.conf
@@ -10764,6 +10764,7 @@
 	patches.suse/drm-bridge-dw-hdmi-use-safe-format-when-first-in-bri.patch
 	patches.suse/drm-syncobj-flatten-dma_fence_chains-on-transfer.patch
 	patches.suse/drm-bridge-anx7625-Fix-overflow-issue-on-reading-EDI.patch
+	patches.suse/drm-mediatek-Allow-commands-to-be-sent-during-video-.patch
 	patches.suse/drm-amdkfd-make-CRAT-table-missing-message-informati.patch
 	patches.suse/drm-amd-display-Remove-vupdate_int_entry-definition.patch
 	patches.suse/drm-tegra-Fix-reference-leak-in-tegra_dsi_ganged_pro.patch
