--- a/series.conf
+++ b/series.conf
@@ -13165,6 +13165,7 @@
 	patches.suse/selftests-seccomp-Fix-compile-warning-when-CC-clang.patch
 	patches.suse/crypto-ccp-Use-kzalloc-for-sev-ioctl-interfaces-to-p.patch
 	patches.suse/crypto-sun8i-ss-fix-infinite-loop-in-sun8i_ss_setup_.patch
+	patches.suse/crypto-ccp-During-shutdown-check-SEV-data-pointer-be.patch
 	patches.suse/crypto-hisilicon-sec-don-t-sleep-when-in-softirq.patch
 	patches.suse/crypto-hisilicon-Kunpeng916-crypto-driver-don-t-slee.patch
 	patches.suse/crypto-hisilicon-hpre-don-t-use-GFP_KERNEL-to-alloc-.patch
