--- a/series.conf
+++ b/series.conf
@@ -13253,6 +13253,7 @@
 	patches.suse/drm-bridge-adv7511-Add-check-for-mipi_dsi_driver_reg.patch
 	patches.suse/drm-mcde-Fix-refcount-leak-in-mcde_dsi_bind.patch
 	patches.suse/drm-doc-Fix-comment-typo.patch
+	patches.suse/drm-vc4-drv-Adopt-the-dma-configuration-from-the-HVS.patch
 	patches.suse/drm-vc4-plane-Remove-subpixel-positioning-check.patch
 	patches.suse/drm-vc4-plane-Fix-margin-calculations-for-the-right-.patch
 	patches.suse/drm-vc4-dsi-Correct-DSI-divider-calculations.patch
