--- a/series.conf
+++ b/series.conf
@@ -12077,6 +12077,7 @@
 	patches.suse/drm-panel-simple-Add-missing-bus-flags-for-Innolux-G.patch
 	patches.suse/drm-amdgpu-sdma-Fix-incorrect-calculations-of-the-wp.patch
 	patches.suse/drm-plane-Move-range-check-for-format_count-earlier.patch
+	patches.suse/drm-bridge-tc358767-Fix-e-DP-bridge-endpoint-parsing.patch
 	patches.suse/drm-panel-panel-simple-Fix-proper-bpc-for-AM-1280800.patch
 	patches.suse/drm-rockchip-vop-fix-possible-null-ptr-deref-in-vop_.patch
 	patches.suse/drm-nouveau-subdev-bus-Ratelimit-logging-for-fault-e.patch
