--- a/series.conf
+++ b/series.conf
@@ -13789,6 +13789,7 @@
 	patches.suse/apparmor-fix-reference-count-leak-in-aa_pivotroot.patch
 	patches.suse/apparmor-Fix-memleak-in-aa_simple_write_to_buffer.patch
 	patches.suse/apparmor-fix-setting-unconfined-mode-on-a-loaded-pro.patch
+	patches.suse/apparmor-fix-overlapping-attachment-computation.patch
 	patches.suse/pinctrl-nomadik-Fix-refcount-leak-in-nmk_pinctrl_dt_.patch
 	patches.suse/pinctrl-qcom-msm8916-Allow-CAMSS-GP-clocks-to-be-mux.patch
 	patches.suse/pinctrl-amd-Don-t-save-restore-interrupt-status-and-.patch
