--- a/series.conf
+++ b/series.conf
@@ -13787,6 +13787,7 @@
 	patches.suse/apparmor-Fix-failed-mount-permission-check-error-mes.patch
 	patches.suse/apparmor-fix-aa_label_asxprint-return-check.patch
 	patches.suse/apparmor-fix-reference-count-leak-in-aa_pivotroot.patch
+	patches.suse/apparmor-Fix-memleak-in-aa_simple_write_to_buffer.patch
 	patches.suse/pinctrl-nomadik-Fix-refcount-leak-in-nmk_pinctrl_dt_.patch
 	patches.suse/pinctrl-qcom-msm8916-Allow-CAMSS-GP-clocks-to-be-mux.patch
 	patches.suse/pinctrl-amd-Don-t-save-restore-interrupt-status-and-.patch
