--- a/series.conf
+++ b/series.conf
@@ -13557,6 +13557,7 @@
 	patches.suse/clk-qcom-gcc-msm8939-Fix-weird-field-spacing-in-ftbl.patch
 	patches.suse/dmaengine-stm32-mdma-Remove-dead-code-in-stm32_mdma_.patch
 	patches.suse/dmaengine-sf-pdma-Add-multithread-support-for-a-DMA-.patch
+	patches.suse/dmaengine-dw-axi-dmac-do-not-print-NULL-LLI-during-e.patch
 	patches.suse/dmaengine-imx-dma-Cast-of_device_get_match_data-with.patch
 	patches.suse/PCI-endpoint-Don-t-stop-controller-when-unbinding-en.patch
 	patches.suse/PCI-portdrv-Don-t-disable-AER-reporting-in-get_port_.patch
