--- a/series.conf
+++ b/series.conf
@@ -13782,6 +13782,7 @@
 	patches.suse/fs-move-S_ISGID-stripping-into-the-vfs_-helpers.patch
 	patches.suse/Revert-scripts-mod-modpost.c-permit-.cranges-secton-.patch
 	patches.suse/kbuild-dummy-tools-avoid-tmpdir-leak-in-dummy-gcc.patch
+	patches.suse/apparmor-fix-absroot-causing-audited-secids-to-begin.patch
 	patches.suse/pinctrl-nomadik-Fix-refcount-leak-in-nmk_pinctrl_dt_.patch
 	patches.suse/pinctrl-qcom-msm8916-Allow-CAMSS-GP-clocks-to-be-mux.patch
 	patches.suse/pinctrl-amd-Don-t-save-restore-interrupt-status-and-.patch
