--- a/series.conf
+++ b/series.conf
@@ -13510,6 +13510,7 @@
 	patches.suse/usb-dwc3-core-Deprecate-GCTL.CORESOFTRESET.patch
 	patches.suse/dt-bindings-usb-mtk-xhci-Allow-wakeup-interrupt-name.patch
 	patches.suse/usb-host-xhci-use-snprintf-in-xhci_decode_trb.patch
+	patches.suse/gadgetfs-ep_io-wait-until-IRQ-finishes.patch
 	patches.suse/usb-dwc3-gadget-refactor-dwc3_repare_one_trb.patch
 	patches.suse/usb-dwc3-gadget-fix-high-speed-multiplier-setting.patch
 	patches.suse/usb-gadget-udc-amd5536-depends-on-HAS_DMA.patch
