--- a/series.conf
+++ b/series.conf
@@ -13737,6 +13737,7 @@
 	patches.suse/video-fbdev-arkfb-Check-the-size-of-screen-before-me.patch
 	patches.suse/video-fbdev-s3fb-Check-the-size-of-screen-before-mem.patch
 	patches.suse/profiling-fix-shift-too-large-makes-kernel-panic.patch
+	patches.suse/lib-list_debug.c-Detect-uninitialized-lists.patch
 	patches.suse/kfifo-fix-kfifo_to_user-return-type.patch
 	patches.suse/lib-smp_processor_id-fix-imbalanced-instrumentation_.patch
 	patches.suse/proc-fix-a-dentry-lock-race-between-release_task-and.patch
