--- a/series.conf
+++ b/series.conf
@@ -13529,6 +13529,7 @@
 	patches.suse/HID-wacom-Don-t-register-pad_input-for-touch-switch.patch
 	patches.suse/HID-hid-input-add-Surface-Go-battery-quirk.patch
 	patches.suse/HID-cp2112-prevent-a-buffer-overflow-in-cp2112_xfer.patch
+	patches.suse/HID-multitouch-new-device-class-fix-Lenovo-X12-track.patch
 	patches.suse/HID-mcp2221-prevent-a-buffer-overflow-in-mcp_smbus_w.patch
 	patches.suse/HID-alps-Declare-U1_UNICORN_LEGACY-support.patch
 	patches.suse/HID-amd_sfh-Add-NULL-check-for-hid-device.patch
