--- a/series.conf
+++ b/series.conf
@@ -13688,6 +13688,7 @@
 	patches.suse/mtd-rawnand-arasan-Fix-clock-rate-in-NV-DDR.patch
 	patches.suse/mtd-spi-nor-fix-spi_nor_spimem_setup_op-call-in-spi_.patch
 	patches.suse/mm-memcontrol-fix-potential-oom_lock-recursion-deadlock.patch
+	patches.suse/vfio-Clear-the-caps-buf-to-NULL-after-free.patch
 	patches.suse/KEYS-asymmetric-enforce-SM2-signature-use-pkey-algo.patch
 	patches.suse/tpm-eventlog-Fix-section-mismatch-for-DEBUG_SECTION_.patch
 	patches.suse/ALSA-usb-audio-Support-jack-detection-on-Dell-dock.patch
