--- a/series.conf
+++ b/series.conf
@@ -13874,6 +13874,7 @@
 	patches.suse/rose-check-NULL-rose_loopback_neigh-loopback.patch
 	patches.suse/r8152-fix-the-units-of-some-registers-for-RTL8156A.patch
 	patches.suse/r8152-fix-the-RX-FIFO-settings-when-suspending.patch
+	patches.suse/nfc-pn533-Fix-use-after-free-bugs-caused-by-pn532_cm.patch
 	patches.suse/net-phy-Don-t-WARN-for-PHY_READY-state-in-mdio_bus_p.patch
 
 	########################################################
