--- a/series.conf
+++ b/series.conf
@@ -13847,6 +13847,7 @@
 	patches.suse/NTB-ntb_tool-uninitialized-heap-data-in-tool_fn_writ.patch
 	patches.suse/docs-i2c-i2c-sysfs-fix-hyperlinks.patch
 	patches.suse/regulator-pca9450-Remove-restrictions-for-regulator-.patch
+	patches.suse/spi-meson-spicc-add-local-pow2-clock-ops-to-preserve.patch
 	patches.suse/net_sched-cls_route-disallow-handle-of-0.patch
 	patches.suse/drm-i915-gt-Skip-TLB-invalidations-once-wedged.patch
 	patches.suse/drm-nouveau-recognise-GA103.patch
