--- a/series.conf
+++ b/series.conf
@@ -13505,6 +13505,7 @@
 	patches.suse/iio-light-isl29028-Fix-the-warning-in-isl29028_remov.patch
 	patches.suse/driver-core-fix-potential-deadlock-in-__driver_attac.patch
 	patches.suse/usb-cdns3-fix-use-after-free-at-workaround-2.patch
+	patches.suse/usb-cdns3-fix-random-warning-message-when-driver-loa.patch
 	patches.suse/usb-host-Fix-refcount-leak-in-ehci_hcd_ppc_of_probe.patch
 	patches.suse/usb-ohci-nxp-Fix-refcount-leak-in-ohci_hcd_nxp_probe.patch
 	patches.suse/usb-gadget-tegra-xudc-Fix-error-check-in-tegra_xudc_.patch
