--- a/series.conf
+++ b/series.conf
@@ -13578,6 +13578,7 @@
 	patches.suse/PCI-portdrv-Don-t-disable-AER-reporting-in-get_port_.patch
 	patches.suse/PCI-AER-Iterate-over-error-counters-instead-of-error.patch
 	patches.suse/PCI-Add-ACS-quirk-for-Broadcom-BCM5750x-NICs.patch
+	patches.suse/PCI-aardvark-Fix-reporting-Slot-capabilities-on-emul.patch
 	patches.suse/PCI-dwc-Stop-link-on-host_init-errors-and-de-initial.patch
 	patches.suse/PCI-dwc-Add-unroll-iATU-space-support-to-dw_pcie_dis.patch
 	patches.suse/PCI-dwc-Disable-outbound-windows-only-for-controller.patch
