--- a/series.conf
+++ b/series.conf
@@ -13818,6 +13818,7 @@
 	patches.suse/pinctrl-qcom-msm8916-Allow-CAMSS-GP-clocks-to-be-mux.patch
 	patches.suse/pinctrl-amd-Don-t-save-restore-interrupt-status-and-.patch
 	patches.suse/pinctrl-sunxi-Add-I-O-bias-setting-for-H6-R-PIO.patch
+	patches.suse/pinctrl-qcom-sm8250-Fix-PDC-map.patch
 	patches.suse/Input-exc3000-fix-return-value-check-of-wait_for_com.patch
 	patches.suse/ACPI-property-Return-type-of-acpi_add_nondev_subnode.patch
 	patches.suse/net-phy-Warn-about-incorrect-mdio_bus_phy_resume-sta.patch
