--- a/series.conf
+++ b/series.conf
@@ -13872,6 +13872,7 @@
 	patches.suse/i2c-imx-Make-sure-to-unregister-adapter-on-remove.patch
 	patches.suse/audit-fix-potential-double-free-on-error-path-from-f.patch
 	patches.suse/rose-check-NULL-rose_loopback_neigh-loopback.patch
+	patches.suse/r8152-fix-the-units-of-some-registers-for-RTL8156A.patch
 	patches.suse/net-phy-Don-t-WARN-for-PHY_READY-state-in-mdio_bus_p.patch
 
 	########################################################
