--- a/series.conf
+++ b/series.conf
@@ -13415,6 +13415,7 @@
 	patches.suse/drm-nouveau-Don-t-pm_runtime_put_sync-only-pm_runtim.patch
 	patches.suse/drm-amd-display-Enable-building-new-display-engine-w.patch
 	patches.suse/fpga-altera-pr-ip-fix-unsigned-comparison-with-less-.patch
+	patches.suse/vboxguest-Do-not-use-devm-for-irq.patch
 	patches.suse/misc-rtsx-Fix-an-error-handling-path-in-rtsx_pci_pro.patch
 	patches.suse/intel_th-Fix-a-resource-leak-in-an-error-handling-pa.patch
 	patches.suse/intel_th-msu-sink-Potential-dereference-of-null-poin.patch
