--- a/series.conf
+++ b/series.conf
@@ -13764,6 +13764,7 @@
 	patches.suse/exfat-Downgrade-ENAMETOOLONG-error-message-to-debug-.patch
 	patches.suse/exfat-Drop-superfluous-new-line-for-error-messages.patch
 	patches.suse/serial-8250_dw-Store-LSR-into-lsr_saved_flags-in-dw8.patch
+	patches.suse/tty-serial-Fix-refcount-leak-bug-in-ucc_uart.c.patch
 	patches.suse/tty-n_gsm-fix-user-open-not-possible-at-responder-un.patch
 	patches.suse/tty-n_gsm-fix-tty-registration-before-control-channe.patch
 	patches.suse/tty-n_gsm-fix-wrong-queuing-behavior-in-gsm_dlci_dat.patch
