--- a/series.conf
+++ b/series.conf
@@ -13786,6 +13786,7 @@
 	patches.suse/serial-mvebu-uart-uart2-error-bits-clearing.patch
 	patches.suse/thermal-sysfs-Fix-cooling_device_stats_setup-error-c.patch
 	patches.suse/tools-thermal-Fix-possible-path-truncations.patch
+	patches.suse/venus-pm_helpers-Fix-warning-in-OPP-during-probe.patch
 	patches.suse/watchdog-sp5100_tco-Fix-a-memory-leak-of-EFCH-MMIO-r.patch
 	patches.suse/watchdog-armada_37xx_wdt-check-the-return-value-of-d.patch
 	patches.suse/rpmsg-char-Add-mutex-protection-for-rpmsg_eptdev_ope.patch
