--- a/series.conf
+++ b/series.conf
@@ -13514,6 +13514,7 @@
 	patches.suse/usb-dwc3-core-Deprecate-GCTL.CORESOFTRESET.patch
 	patches.suse/usb-host-ohci-ppc-of-Fix-refcount-leak-bug.patch
 	patches.suse/usb-renesas-Fix-refcount-leak-bug.patch
+	patches.suse/usb-dwc2-gadget-remove-D-pull-up-while-no-vbus-with-.patch
 	patches.suse/dt-bindings-usb-mtk-xhci-Allow-wakeup-interrupt-name.patch
 	patches.suse/usb-host-xhci-use-snprintf-in-xhci_decode_trb.patch
 	patches.suse/gadgetfs-ep_io-wait-until-IRQ-finishes.patch
