--- a/series.conf
+++ b/series.conf
@@ -48461,6 +48461,7 @@
 	patches.suse/ibmvnic-rework-to-ensure-SCRQ-entry-reads-are-proper.patch
 	patches.suse/ibmvnic-remove-unnecessary-rmb-inside-ibmvnic_poll.patch
 	patches.suse/r8169-Add-support-for-another-RTL8168FP.patch
+	patches.suse/msft-hv-2243-hv_netvsc-Load-and-store-the-proper-NBL_HASH_INFO-pe.patch
 	patches.suse/igb-Enable-RSS-for-Intel-I211-Ethernet-Controller.patch
 	patches.suse/ath10k-Fix-error-handling-in-case-of-CE-pipe-init-fa.patch
 	patches.suse/ath-Use-safer-key-clearing-with-key-cache-entries.patch
