--- a/series.conf
+++ b/series.conf
@@ -13502,6 +13502,7 @@
 	patches.suse/phy-stm32-fix-error-return-in-stm32_usbphyc_phy_init.patch
 	patches.suse/iio-fix-iio_format_avail_range-printing-for-none-IIO.patch
 	patches.suse/iio-light-isl29028-Fix-the-warning-in-isl29028_remov.patch
+	patches.suse/spmi-trace-fix-stack-out-of-bound-access-in-SPMI-tracing-functions.patch
 	patches.suse/driver-core-fix-potential-deadlock-in-__driver_attac.patch
 	patches.suse/usb-host-Fix-refcount-leak-in-ehci_hcd_ppc_of_probe.patch
 	patches.suse/usb-ohci-nxp-Fix-refcount-leak-in-ohci_hcd_nxp_probe.patch
