--- a/series.conf
+++ b/series.conf
@@ -13650,6 +13650,7 @@
 	patches.suse/ext4-unindent-codeblock-in-ext4_xattr_block_set.patch
 	patches.suse/ext4-fix-race-when-reusing-xattr-blocks.patch
 	patches.suse/xfs-fix-use-after-free-in-xattr-node-block-inactivat.patch
+	patches.suse/ftrace-x86-Add-back-ftrace_expected-assignment.patch
 	patches.suse/Input-gscps2-check-return-value-of-ioremap-in-gscps2.patch
 	patches.suse/ARM-dts-uniphier-Fix-USB-interrupts-for-PXs2-SoC.patch
 	patches.suse/arm64-dts-uniphier-Fix-USB-interrupts-for-PXs3-SoC.patch
