--- a/series.conf
+++ b/series.conf
@@ -49202,6 +49202,7 @@
 	patches.suse/virtio-s390-implement-virtio-ccw-revision-2-correctly
 	patches.suse/i2c-brcmstb-Fix-brcmstd_send_i2c_cmd-condition.patch
 	patches.suse/i2c-exynos5-Preserve-high-speed-master-code.patch
+	patches.suse/blktrace-fix-blk_rq_merge-documentation.patch
 	patches.suse/blk-settings-align-max_sectors-on-logical_block_size.patch
 	patches.suse/scsi-mpt3sas-Fix-ReplyPostFree-pool-allocation
 	patches.suse/scsi-qla2xxx-Simplify-if-statement.patch
