--- a/series.conf
+++ b/series.conf
@@ -54457,6 +54457,7 @@
 	patches.suse/device-property-Fix-documentation-for-FWNODE_GRAPH_D.patch
 	patches.suse/Documentation-ACPI-Fix-data-node-reference-documenta.patch
 	patches.suse/select-Fix-indefinitely-sleeping-task-in-poll_schedu.patch
+	patches.suse/cgroup-Trace-event-cgroup-id-fields-should-be-u64.patch
 	patches.suse/workqueue-Fix-unbind_workers-VS-wq_worker_running-ra.patch
 	patches.suse/Documentation-refer-to-config-RANDOMIZE_BASE-for-ker.patch
 	patches.suse/crypto-caam-replace-this_cpu_ptr-with-raw_cpu_ptr.patch
