--- a/series.conf
+++ b/series.conf
@@ -54643,6 +54643,7 @@
 	patches.suse/tracing-uprobes-Check-the-return-value-of-kstrdup-for-tu-filename.patch
 	patches.suse/tracing-Add-test-for-user-space-strings-when-filtering-on-string-pointers.patch
 	patches.suse/tracing-kprobes-nmissed-not-showed-correctly-for-kretprobe.patch
+	patches.suse/tracing-Add-ustring-operation-to-filtering-string-pointers.patch
 	patches.suse/i3c-fix-incorrect-address-slot-lookup-on-64-bit.patch
 	patches.suse/i3c-master-dw-check-return-of-dw_i3c_master_get_free.patch
 	patches.suse/Input-ti_am335x_tsc-set-ADCREFM-for-X-configuration.patch
