--- a/series.conf
+++ b/series.conf
@@ -56440,6 +56440,7 @@
 	patches.suse/drm-i915-fix-a-possible-refcount-leak-in-intel_dp_ad.patch
 	patches.suse/drm-panfrost-Put-mapping-instead-of-shmem-obj-on-pan.patch
 	patches.suse/drm-panfrost-Fix-shrinker-list-corruption-by-madvise.patch
+	patches.suse/tracing-histograms-Fix-memory-leak-problem.patch
 	patches.suse/cgroup-Use-separate-src-dst-nodes-when-preloading-css_sets-for-migration.patch
 	patches.suse/ASoC-sgtl5000-Fix-noise-on-shutdown-remove.patch
 	patches.suse/ASoC-Intel-Skylake-Correct-the-ssp-rate-discovery-in.patch
