--- a/series.conf
+++ b/series.conf
@@ -1393,6 +1393,7 @@
 	patches.kernel.org/5.19.4-175-ASoC-Intel-avs-Fix-potential-buffer-overflow-b.patch
 	patches.kernel.org/5.19.4-176-ASoC-SOF-debug-Fix-potential-buffer-overflow-b.patch
 	patches.kernel.org/5.19.4-177-ASoC-SOF-Intel-hda-Fix-potential-buffer-overfl.patch
+	patches.kernel.org/5.19.4-178-ASoC-DPCM-Don-t-pick-up-BE-without-substream.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
