--- a/series.conf
+++ b/series.conf
@@ -1471,6 +1471,7 @@
 	patches.kernel.org/5.19.4-253-net-mscc-ocelot-report-ndo_get_stats64-from-th.patch
 	patches.kernel.org/5.19.4-254-x86-ibt-objtool-Add-IBT_NOSEAL.patch
 	patches.kernel.org/5.19.4-255-x86-kvm-Fix-missing-ENDBR-BUG-for-fastop-funct.patch
+	patches.kernel.org/5.19.4-256-thunderbolt-Change-downstream-router-s-TMU-rat.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
