--- a/series.conf
+++ b/series.conf
@@ -7335,6 +7335,7 @@
 	patches.suse/perf-Ignore-sigtrap-for-tracepoints-destined-for-other-tasks.patch
 	patches.suse/sched-scs-Reset-task-stack-state-in-bringup_cpu.patch
 	patches.suse/vhost-vsock-fix-incorrect-used-length-reported-to-th.patch
+	patches.suse/vdpa_sim-avoid-putting-an-uninitialized-iova_domain.patch
 	patches.suse/KVM-arm64-Avoid-setting-the-upper-32-bits-of-TCR_EL2-and-CPTR_EL2-to-1.patch
 	patches.suse/KVM-x86-mmu-Fix-TLB-flush-range-when-handling-discon.patch
 	patches.suse/KVM-Ensure-local-memslot-copies-operate-on-up-to-dat.patch
