--- a/series.conf
+++ b/series.conf
@@ -13222,6 +13222,7 @@
 	patches.suse/r8152-fix-a-WOL-issue.patch
 	patches.suse/Documentation-fix-udp_wmem_min-in-ip-sysctl.rst.patch
 	patches.suse/xfrm-xfrm_policy-fix-a-possible-double-xfrm_pols_put.patch
+	patches.suse/mtd-rawnand-gpmi-Set-WAIT_FOR_READY-timeout-based-on.patch
 	patches.suse/drm-amdgpu-Remove-one-duplicated-ef-removal.patch
 	patches.suse/drm-ttm-fix-locking-in-vmap-vunmap-TTM-GEM-helpers.patch
 	patches.suse/drm-imx-dcss-Add-missing-of_node_put-in-fail-path.patch
